Fixed the Image Z-Index Bug

--- a/style.css
+++ b/style.css
@@ -592,12 +592,14 @@ main>* {
 
     .gobackButton {
         position: absolute;
+        z-index: 5000;
         top: 1%;
         left: 5%;
         background-color: white;
         width: 2rem;
         color: black;
         height: 2rem;
+        cursor: pointer;
         border-radius: 0.5rem;
     }
 
@@ -726,6 +728,7 @@ main>* {
     .photo {
         width: 100%;
         border-radius: 0;
+        pointer-events: none;
     }
 
     .productPane {
